<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start">START</string>
    <string name="start_image">start image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="nextexercise">nextexercise</string>
    <string name="congratulations">CONGRATULATIONS YOU HAVE FINISHED THE 7 MIN WORKOUT</string>
    <string name="congratulations_you_have_done_the_workout">Congratulations! \n
        You Have completed the workout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_lb">WEIGHT(in lb)</string>
    <string name="calendarimage">calendarImage</string>
    <string name="history">History</string>
    <string name="routine_completed">Routine Completed :</string>
    <string name="delete_record">delete Record</string>

</resources>