<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <TextView
        android:id="@+id/confirmation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textSize="@dimen/default_textSize"
        android:gravity="center"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/this_will_stop_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/confirmation_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="65dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/coloAccent"
            />

        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/no"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/coloAccent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>