<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/black"
        app:titleTextColor="@color/white"
        />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background"
        android:orientation="horizontal">
        
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_unit_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_unit_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </RadioGroup>

    <!--Metric Units-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:layout_below="@id/rgUnits"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weight_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_input_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:layout_below="@id/weight_ti"
        android:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/height_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--US Units-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_in_lb_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:backgroundTint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:layout_below="@id/rgUnits"
        android:visibility="invisible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weight_in_lb_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_lb"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/Ll_us_metric_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/weight_in_lb_ti"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_feet_input_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/height_feet_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:inputType="number"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height__inch_input_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:layout_weight="1"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/height_inch_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inch"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Bmi information display-->
    <LinearLayout
        android:id="@+id/Ll_bmi_calculation"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_input_ti"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        >
        <TextView
            android:id="@+id/your_bmi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi"
            android:textSize="16sp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/bmi_conclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/bmi_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:backgroundTint="@color/coloAccent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/Ll_bmi_calculation"
        style="@style/Widget.MaterialComponents.Button"
        />




</RelativeLayout>